# plugin_test

./: .gitignore  CMakeLists.txt  README.md  helper.cmake
core/: CMakeLists.txt
core/src/: application.cpp  application.h  entry_point.cpp
core/src/config/: config.cpp  config.h  config.inl
core/src/event/: application_event.h  event.h  event_bus.h  event_bus.inl  input_event.h
core/src/plugin_system/: i_vfs_plugin.h  i_window_plugin.h  plugin_interface.h  plugin_manager.cpp  plugin_manager.h  plugin_manager.inl
core/src/resource_manager/: manager_template.h  manager_template.inl
core/src/util/: core_config.h  crash_handler.cpp  crash_handler.h  macros.h  pch.h  system.cpp  system.h  util.h
core/src/util/data_structures/: UUID.cpp  UUID.h  data_types.h  string_manipulation.cpp  string_manipulation.h  string_manipulation.inl  thread_pool.cpp  thread_pool.h  type_deletion_queue.cpp  type_deletion_queue.h
core/src/util/io/: config.cpp  config.h  io.cpp  io.h  logger.cpp  logger.h  serializer_binary.cpp  serializer_binary.h  serializer_data.h  serializer_yaml.cpp  serializer_yaml.h  vfs.cpp  vfs.h
core/src/util/math/: constance.h  math.cpp  math.h  math.inl  random.cpp  random.h
core/src/util/timing/: interval_controller.cpp  interval_controller.h  stopwatch.cpp  stopwatch.h
plugin/: CMakeLists.txt
plugin/glfw_window/: CMakeLists.txt
plugin/glfw_window/src/: entry_point.cpp  window.cpp  window.h
plugin/input_test/: CMakeLists.txt  info.glt_plugin
plugin/input_test/src/: entry_point.cpp
plugin/logger/: CMakeLists.txt
plugin/logger/src/: entry_point.cpp  logger.cpp  logger.h
plugin/virtual_file_system_vfspp/: CMakeLists.txt
plugin/virtual_file_system_vfspp/cmake/: miniz-cpp_fix.patch
plugin/virtual_file_system_vfspp/src/: entry_point.cpp  vfs.cpp  vfs.h
